--- a/flask/requirements.txt
+++ b/flask/requirements.txt
@@ -2,6 +2,7 @@ blinker==1.9.0
 click==8.2.1
 colorama==0.4.6
 Flask==3.1.1
+Flask-JWT-Extended==4.7.1
 Flask-SQLAlchemy==3.1.1
 greenlet==3.2.3
 iniconfig==2.1.0
@@ -11,6 +12,7 @@ MarkupSafe==3.0.2
 packaging==25.0
 pluggy==1.6.0
 Pygments==2.19.2
+PyJWT==2.10.1
 pytest==8.4.1
 SQLAlchemy==2.0.41
 typing_extensions==4.14.1
